# serializer version: 1
# name: test_attach_subtractions.1
  list([
    dict({
      'id': 'sub_1',
      'subtractions': list([
        dict({
          'id': '7cf872dc',
          'name': 'foo',
        }),
        dict({
          'id': 'da42dca3',
          'name': 'foo',
        }),
      ]),
    }),
    dict({
      'id': 'sub_2',
      'subtractions': list([
        dict({
          'id': '7cf872dc',
          'name': 'foo',
        }),
      ]),
    }),
    dict({
      'id': 'sub_3',
      'subtractions': list([
      ]),
    }),
  ])
# ---
# name: test_attach_subtractions[documents0]
  dict({
    'id': 'sub_1',
    'subtractions': list([
      dict({
        'id': 'foo',
        'name': 'Foo',
      }),
      dict({
        'id': 'bar',
        'name': 'Bar',
      }),
    ]),
  })
# ---
# name: test_attach_subtractions[documents1]
  list([
    dict({
      'id': 'sub_1',
      'subtractions': list([
        dict({
          'id': 'foo',
          'name': 'Foo',
        }),
        dict({
          'id': 'bar',
          'name': 'Bar',
        }),
      ]),
    }),
    dict({
      'id': 'sub_2',
      'subtractions': list([
        dict({
          'id': 'foo',
          'name': 'Foo',
        }),
      ]),
    }),
    dict({
      'id': 'sub_3',
      'subtractions': list([
      ]),
    }),
  ])
# ---
# name: test_attach_subtractions[multiple]
  list([
    dict({
      'id': 'sub_1',
      'subtractions': list([
        dict({
          'id': '7cf872dc',
          'name': 'foo',
        }),
        dict({
          'id': 'da42dca3',
          'name': 'foo',
        }),
      ]),
    }),
    dict({
      'id': 'sub_2',
      'subtractions': list([
        dict({
          'id': '7cf872dc',
          'name': 'foo',
        }),
      ]),
    }),
    dict({
      'id': 'sub_3',
      'subtractions': list([
      ]),
    }),
  ])
# ---
# name: test_attach_subtractions[single]
  dict({
    'id': 'sub_1',
    'subtractions': list([
      dict({
        'id': '7cf872dc',
        'name': 'foo',
      }),
      dict({
        'id': 'da42dca3',
        'name': 'foo',
      }),
    ]),
  })
# ---
